# PiDAJ

./: Dockerfile  README.md  pyproject.toml  requirements.txt
pdaj/: manage.py
pdaj/pdaj/: settings.py  urls.py  wsgi.py
pdaj/table/: models.py  serializers.py  views.py
